--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # Compiled output
+/dist
 /tmp
 /out-tsc
 /bazel-out
@@ -39,3 +40,4 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+.vercel
